Refactor project: update services, controllers, entities, and DTOs; remove WebSocket config and message classes